Fixed resonsive issue on mobile device

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,8 +5,6 @@
 }
 
 
-
-
 /*     Help section custom styling     */
 .help-section, .adoption {
   background-color: var(--main-color);
@@ -20,7 +18,9 @@
 
 /*     About section custom styling     */
 .about-us {
-  height: 100vh;
+  max-height: 100vh;
+  overflow: scroll;
+  margin-bottom: 3rem;
 }
 
 .about-us-text {
@@ -80,16 +80,19 @@
 /*     Media queries     */
 @media screen and (max-width: 768px){
     .svg-size {
-      display: none;
+      max-height: 48px;
+      max-width: 48px;
     }
+    
     .about-us {
-      height: 130vh;
+      margin-bottom: 1rem;
     }
     .img-size {
       display: none;
     }
-    .help-section {
-      height: 30vh;
+    .help-section .adoption {
+      max-height: 40vh;
+      overflow-y: scroll;
     }
     .adoption-steps {
       margin: 5rem 1rem;
